Disables the standard compositing path while in WebVR Presentation by pausing VSync. This prevents rAFs and other unnecessary compositor work from happening.

BUG=698923

Review-Url: https://codereview.chromium.org/2754493002
Cr-Commit-Position: refs/heads/master@{#457552}

Former-commit-id: b10e886bab7da85506656b4bb83e707cc2170209